--- a/Software/Codigo.v.1.0.0/htdocs/index.html
+++ b/Software/Codigo.v.1.0.0/htdocs/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" data-ng-app="motosTiburon">
 
 <head>
 <title>TIBURÓN :: Transporte de Motos</title>
+
+<!-- Necesario para que reconozca todo en internet explorer -->
+<meta http-equiv="X-UA-Compatible" content="IE=11" />
+<meta http-equiv="X-UA-Compatible" content="IE=9" />
+<meta http-equiv="Content-type" content="text/html;" charset="utf-8" />
+
 <meta name="title" content="TIBURÓN :: Transporte de Motos"></meta>
 <meta name="DC.Title" content="TIBURÓN :: Transporte de Motos"></meta>
 <meta http-equiv="title" content="TIBURÓN :: Transporte de Motos"></meta>
@@ -25,11 +31,7 @@
 
 
 
-<meta charset="utf-8" />
-<!-- Necesario para que reconozca todo en internet explorer -->
-<meta http-equiv="X-UA-Compatible" content="IE=11" />
-<meta http-equiv="X-UA-Compatible" content="IE=9" />
-<meta http-equiv="Content-type" content="text/html;" charset="utf-8" />
+
 <!-- encoding para la página -->
 
 <!-- Codificación necesaria para que sea aceptado por todos los dispositivos gracias a bootstrap -->
@@ -60,7 +62,7 @@
 <link rel="stylesheet" href="/static/css/index.css"></link>
 
 <!-- Hoja de estilo fuentes google -->
-<link href="/font/material-design-icons/material-icons.css"
+<link href="/static/font/material-design-icons/material-icons.css"
 	rel="stylesheet" />
 
 
@@ -71,9 +73,53 @@
 
 <script src="/static/js/custom-date-picker.js"></script>
 
+
+<!-- Angular -->
+<script src="/static/js/angularjs/1.6.9/angular.min.js"></script>
+<script src="/static/js/angularjs/1.6.9/angular-route.min.js"></script>
+<script src="/static/js/angularjs/1.6.9/angular-resource.min.js"></script>
+
+<!-- Angular dependecies -->
+<script>
+	angular.module("motosTiburon", ["ngRoute"])
+	.config(function($routeProvider){
+
+//		$routeProvider.when("/clientes", {
+//			templateUrl: "/static/js/angularjs/motosTiburon/1.0.0/views/home/clientes.html"
+//		});
+//
+//		$routeProvider.when("/contacto", {
+//			templateUrl: "/static/js/angularjs/motosTiburon/1.0.0/views/home/contacto.html"
+//		});
+//
+//		$routeProvider.when("/empresa", {
+//			templateUrl: "/static/js/angularjs/motosTiburon/1.0.0/views/home/empresa.html"
+//		});
+//
+//		$routeProvider.when("/presupuesto", {
+//			templateUrl: "/static/js/angularjs/motosTiburon/1.0.0/views/home/presupuesto.html"
+//		});
+//
+//		$routeProvider.when("/servicios", {
+//			templateUrl: "/static/js/angularjs/motosTiburon/1.0.0/views/home/servicios.html"
+//		});
+//
+		$routeProvider.otherwise({
+			templateUrl: "/static/js/angularjs/motosTiburon/1.0.0/views/home/inicial.html"
+		});
+
+	});
+</script>
+
+<script src="/static/js/angularjs/motosTiburon/1.0.0/controllers/motosTiburon.js"></script>
+
+
+
+
+
 </head>
 
-<body onscroll="stickNavBar()"
+<body data-ng-controller="motosTiburonCtrl" onscroll="stickNavBar()"
 	style="font-family: 'Source Sans Pro', sans-serif; font-size: 18px;">
 
 	<div id="imageSlider" class="col-sm-12 empty"
@@ -114,7 +160,7 @@
 				<span class="material-icons"
 					style="font-size: 40px; color: white; margin: 3px; width: 100%; border-radius: 7px; border: 1px;">dehaze</span>
 			</button>
-			<a class="navbar-brand active" href="/motostiburon/home"> <span
+			<a class="navbar-brand active" href="#"> <span
 				class="glyphicon glyphicon-home"></span>
 
 			</a> <img class="visible-xs motosTiburonLetras" alt="Motos tiburón"
@@ -127,11 +173,11 @@
 
 		<div class="collapse navbar-collapse" id="collapseMenu">
 			<ul class="nav navbar-nav" style="margin: 0px; border: 0px">
-				<li><a href="/motostiburon/empresa">Empresa</a></li>
-				<li><a href="/motostiburon/servicios">Servicios</a></li>
-				<li><a href="/motostiburon/clientes">Clientes</a></li>
-				<li><a href="/motostiburon/contacto">Contacto</a></li>
-				<li><a href="/motostiburon/presupuesto">Presupuesto</a></li>
+				<li><a href="#/empresa">Empresa</a></li>
+				<li><a href="#/servicios">Servicios</a></li>
+				<li><a href="#/clientes">Clientes</a></li>
+				<li><a href="#/contacto">Contacto</a></li>
+				<li><a href="#/presupuesto">Presupuesto</a></li>
 			</ul>
 
 			<div>
@@ -151,7 +197,7 @@
 
 		<div class="col-sm-12" style="min-height: 60px"></div>
 
-		<div data-th-include="${contenedor}::${fragmento}"></div>
+		<data-ng-view />
 
 
 	</div>
@@ -205,7 +251,7 @@
 	</div>
 
 
-	<script inline="javascript">
+	<script>
 		// <![CDATA[
 		/********************************
 		 * Visor de imágenes
